---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ????
  Changes:
    - Correctly increase minor version because of api changes and additions.
    - Added sound when moving entities.
  Bugfixes:
    - Fix oblong rotation.
    - Fix oblong failed rotation.
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2022-05-04
  Features:
    - Added remote interface add_oblong_name->boolean, remove_oblong_name->boolean for registering and removing oblong entities.
    - Added remote interface get_oblong_names to return a dictionary = true mapping of oblong names.
  Changes:
    - Removed silent from add_blacklist_name, remove_blacklist_name, get_blacklist_names, get/add return true/false.
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2022-04-08
  Changes:
    - Add settings to ignore collision checks.
  Bugfixes:
    - Saved dollies don't get unsaved when selection changes to a blacklisted entity. (i.e. moving pole on resource patches)
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2020-11-28
  Changes:
    - Make re-blacklisting entities less spammy.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2020-11-25
  Changes:
    - Code cleanup and optimizations.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-10-10
  Bugfixes:
    - Make sure to actually require the interface. #10
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-09-22
  Features:
    - Oblong pumps can now be rotated.
  Changes:
    - Removed rotate ghost since ghosts can't be rotated.