@@ -13,7 +13,7 @@ dolly-ignore-collisions=Ignore collision boxes
 dolly-allow-ignore-collisions=Allow ignoring collisions
 
 [mod-setting-description]
-dolly-save-entity=Temporarily Saves entities so they can be moved without having to keep selecing them.
+dolly-save-entity=Temporarily Saves entities for X seconds so they can be moved without having to keep selecing them. 0 to disable saving.
 dolly-ignore-collisions=Allow moving entities such that they collide/overlap. Forbidden by default by global setting. Dangerous and cheat-y.
 dolly-allow-ignore-collisions=Allow players to use the "Ignore collision boxes" setting.
 
