@@ -2,8 +2,10 @@ data:extend {
     {
         name = 'dolly-save-entity',
         setting_type = 'runtime-per-user',
-        type = 'bool-setting',
-        default_value = true
+        type = 'int-setting',
+        default_value = 4,
+        minimum_value = 0,
+        maximum_value = 60,
     },
     {
         name = 'dolly-ignore-collisions',
