@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - Correctly increase minor version because of api changes and additions.
     - Added sound when moving entities.
+    - Save last entity can now be adjusted with a custom save time.
   Bugfixes:
     - Fix oblong rotation.
     - Fix oblong failed rotation.
